[#118,#97,#95] Implementing spec changes - channel/manifest split, blocklist and resolve strategies